Utworzenie UserService i UtilityService'
